got searched images loading on to my server as well as being able to be opened for all of them and be deleted only if they are your own posts

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -9,3 +9,18 @@
 .profile-picture.profile-picture-sm {
   height: 64px;
 }
+
+.offcanvas-body-scroll {
+  overflow-y: auto;
+}
+
+.gift-card {
+  height: 60dvh;
+}
+
+.gift-card-image {
+  width: 100%;
+  min-height: 45vh;
+  height: auto;
+  display: flex;
+}
